# rust-heat-equation

./: .gitignore  Cargo.toml  README.md  andrei-solution.py  plot.py  python-solution.py
src/: main.rs
